# hns-dane-browser-android

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml  ios-screenshots.yml  ios-testflight.yml
android/app/: build.gradle.kts  gradle.lockfile
android/gradle/: libs.versions.toml  verification-metadata.xml
docs/: architecture.md  branding-audit.md  experimental-hns-p2p-dns-relay.md  experimental-p2p-dns-relay-runbook.md  hns-authoritative-doh-crewball-test.md  hns-browser-capsule-crewball-test.md  ios-app-store-release.md  ios-app-store-screenshots.md  ios-device-validation.md  milestones.md  play-store-readiness.md  privacy-policy.md  production-readiness-audit.md  security-model.md  supply-chain-audit.md  sync-audit.md  version-audit.md
fixtures/experimental-dns-relay/: malformed-length.hex  manifest.json  oversized-request.hex  oversized-response.hex  request-basic.hex  request-max-qname.hex  request-max.hex  response-error.hex  response-max.hex  response-ok.hex  trailing-bytes.hex  unknown-status.hex  zero-request-id.hex
ios/: project.yml
ios/HnsDaneBrowser.xcodeproj/: project.pbxproj
ios/HnsDaneBrowser/App/: AppDelegate.swift  BrowserProcess.swift  SceneDelegate.swift
ios/HnsDaneBrowser/Core/: BrowserAuthenticationPolicy.swift  BrowserDownloadController.swift  BrowserModels.swift  BrowserNavigationParser.swift  BrowserProxyCoordinator.swift  BrowserProxyStateMachine.swift  BrowserRuntimePolicyStore.swift  HeaderSnapshotBootstrapper.swift  PersistentWebKitProfile.swift  RustBrowserRuntime.swift
ios/HnsDaneBrowser/Support/: Info.plist  (+1 more)
ios/HnsDaneBrowserScreenshotTests/: AppStoreScreenshotTests.swift
ios/HnsDaneBrowserTests/: BrowserAuthenticationPolicyTests.swift  BrowserNavigationParserTests.swift  BrowserProxyStateMachineTests.swift  BrowserRuntimeControlTests.swift  HeaderSnapshotBootstrapperTests.swift  MainFrameAdmissionPolicyTests.swift
rust/: Cargo.toml
rust/crates/android-ffi/: Cargo.toml
rust/crates/android-ffi/src/: lib.rs
rust/crates/hns-browser-runtime/: Cargo.toml
rust/crates/hns-browser-runtime/src/: lib.rs
rust/crates/hns-chain/src/: lib.rs
rust/crates/hns-core/src/: dns.rs  network_policy.rs  pow.rs
rust/crates/hns-dane/: Cargo.toml
rust/crates/hns-dane/src/: lib.rs
rust/crates/hns-dnssec/src/: lib.rs
rust/crates/hns-gateway/src/: lib.rs
rust/crates/hns-loopback-proxy/: Cargo.toml
rust/crates/hns-loopback-proxy/src/: auth.rs  backend.rs  certificate.rs  config.rs  endpoint.rs  event.rs  host.rs  http1.rs  icann.rs  lib.rs  listener.rs  metadata.rs  rate_limit.rs  response.rs  server.rs  tls.rs
rust/crates/hns-p2p/: Cargo.toml
rust/crates/hns-p2p/src/: dns_relay.rs  lib.rs
rust/crates/hns-resolver/src/: lib.rs
rust/crates/hns-sync/src/: lib.rs
rust/crates/hns-transport/src/: lib.rs
rust/crates/ios-ffi/: Cargo.toml
rust/crates/ios-ffi/include/: hns_browser.h  module.modulemap
rust/crates/ios-ffi/src/: lib.rs
rust/crates/ios-ffi/tests/: header_smoke.c  header_smoke.cc
rust/fuzz/fuzz_targets/: p2p_frame.rs
scripts/: build-ios.sh  build-rust-ios.sh  check-ios-abi.sh  check-runtime-boundaries.sh  check-version-consistency.sh  check.sh  ci-changed-targets.sh  generate-experimental-dns-relay-fixtures.py  generate-ios-app-store-screenshots.sh  generate-third-party-notices.py  ios_screenshot_tools.py  play-upload-closed-testing.sh  run-ios-gate.sh  select_ios_simulator.py  stage-ios-app-store-screenshots.sh  test-experimental-p2p-dns-relay-full.sh  test-experimental-p2p-dns-relay.sh  test_select_ios_simulator.py  third-party-notices.sha256  upload-ios-testflight.sh  with-local-signing.sh
tests/: test_ci_changed_targets.py  test_ios_screenshot_tools.py
tests/experimental-dns-relay/: compose.yaml  full-browser-entrypoint.py  full-compose.yaml  full-hsd-entrypoint.py  full-provision.js  full-signed-authority.js  full-zone.js  generate-origin-certificate.sh  harness.py
(+129 files in other folders)
