[package]
name = "hns-browser-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hns-chain.workspace = true
hns-core.workspace = true
hns-dane.workspace = true
hns-gateway.workspace = true
hns-p2p.workspace = true
hns-resolver.workspace = true
hns-sync.workspace = true
hns-transport.workspace = true
hns-urkel.workspace = true
rcgen.workspace = true
sha2.workspace = true
