[package]
name = "hns-loopback-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
hns-resolver.workspace = true
httparse.workspace = true
idna.workspace = true
rcgen = { workspace = true, features = ["zeroize"] }
ring.workspace = true
rustls.workspace = true
subtle.workspace = true
thiserror.workspace = true
zeroize.workspace = true
